--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,118 @@
+absl-py==0.2.2
+APScheduler==3.5.1
+astor==0.6.2
+attrs==18.1.0
+Automat==0.6.0
+bleach==1.5.0
+boto3==1.7.28
+botocore==1.10.28
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
-ChatterBot==0.8.5
+ChatterBot==0.8.7
 chatterbot-corpus==1.1.2
+click==6.7
+cloudpickle==0.5.3
+colorama==0.3.9
+coloredlogs==10.0
+colorhash==1.0.2
+ConfigArgParse==0.13.0
+constantly==15.1.0
+cycler==0.10.0
+cymem==1.31.2
+cytoolz==0.9.0.1
+decorator==4.3.0
+dill==0.2.7.1
 Django==2.0.5
 djangorestframework==3.8.2
+docopt==0.6.2
+docutils==0.14
+en-core-web-md==2.0.0
+fakeredis==0.10.3
+fbmessenger==5.1.0
+Flask==1.0.2
+Flask-Cors==3.0.4
 future==0.16.0
+gast==0.2.0
+gevent==1.3.1
+graphviz==0.8.3
+greenlet==0.4.13
+grpcio==1.12.0
+h5py==2.7.1
+html5lib==0.9999999
+humanfriendly==4.12.1
+hyperlink==18.0.0
 idna==2.6
+incremental==17.5.0
+itsdangerous==0.24
+Jinja2==2.10
+jmespath==0.9.3
+jsonpickle==0.9.6
+jsonschema==2.6.0
+Keras==2.1.6
+kiwisolver==1.0.1
+klein==17.10.0
+Markdown==2.6.11
+MarkupSafe==1.0
 mathparse==0.1.1
-nltk==3.2.5
-oauthlib==2.0.7
+matplotlib==2.2.2
+mattermostwrapper==2.1
+msgpack==0.5.6
+msgpack-numpy==0.4.3
+msgpack-python==0.5.6
+murmurhash==0.28.0
+networkx==2.1
+nltk==3.3
+numpy==1.14.3
+oauthlib==2.1.0
+packaging==17.1
+pathlib==1.0.1
+plac==0.9.6
+preshed==1.0.0
+protobuf==3.5.2.post1
+pycparser==2.18
+PyJWT==1.6.4
+pykwalify==1.6.0
 pymongo==3.6.1
+pyparsing==2.2.0
+pyreadline==2.1
+PySocks==1.6.8
+python-crfsuite==0.9.5
 python-dateutil==2.6.1
+python-telegram-bot==10.1.0
 python-twitter==3.4.1
 pytz==2018.4
 PyYAML==3.12
+rasa-core==0.9.1
+rasa-nlu==0.12.3
+redis==2.10.6
+regex==2018.2.21
 requests==2.18.4
 requests-oauthlib==0.8.0
+ruamel.yaml==0.15.37
+s3transfer==0.1.13
+scikit-learn==0.19.1
+scipy==1.1.0
+simplejson==3.15.0
 six==1.11.0
-SQLAlchemy==1.2.7
+sklearn-crfsuite==0.3.6
+slackclient==1.2.1
+spacy==2.0.11
+SQLAlchemy==1.2.8
+tabulate==0.8.2
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
+thinc==6.10.2
+toolz==0.9.0
+tqdm==4.23.4
+twilio==6.14.3
+Twisted==18.4.0
+typing==3.6.4
+tzlocal==1.5.1
+ujson==1.35
 urllib3==1.22
+websocket-client==0.48.0
+Werkzeug==0.14.1
+wrapt==1.10.11
+zope.interface==4.5.0
